# backend/src/routes/gameround.route.ts
@@ -1,0 +1,8 @@
+import { Router } from "express"
+import { getGameRoundById } from "../controllers/round.controller"
+
+const router = Router()
+
+router.get("/:roundId", getGameRoundById)
+
+export default router
